--- a/index.html
+++ b/index.html
@@ -1,8 +1,15 @@
-<title>Louis' Webpage</title>
+<html>
+    <head>
+        <title>Louis' Webpage</title>
+    </head>
+    <body>
 
-<header>Welcome to Louis' Webpage</header>
-<main>
 
+    <header>Welcome to Louis' Webpage</header>
+    
+    <main>
+        <p>Hello World.</p>
+    </main>
 
-
-</main>
+    </body>
+</html>
