--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <body>
 
 
-    <header>Welcome to Louis' Webpage</header>
-    
-    <main>
-        <p>Hello World.</p>
-    </main>
+    <h1>>Welcome to Louis' Webpage</h1>
+    <p>Hello World.</p>
 
     </body>
 </html>
