--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     </head>
     <body>
 
-    <h1>>Welcome to Louis' Webpage</h1>
+    <h1>Welcome to Louis' Webpage</h1>
     <p>Hello World.</p>
 
     </body>
