--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     </head>
     <body>
 
-    <h1>Welcome to Louis' Webpage</h1>
-    <p>Hello World.</p>
+        <h1>Welcome to Louis' Webpage</h1>
+        <p>Hello World.</p>
+
+
+        <a href="google.com">This is a link to google.</a>
+
+        <button onclick="showMsg()">This is a button.</button>
+
 
     </body>
+
+    <script>
+        function showMsg() {
+            alert("This is an alert.")
+        }
+    </script>
 </html>
