--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
 
         <h1>Welcome to Louis' Webpage</h1>
-        <p>You are a poopface.</p><br>
+        <p>Hello world.</p><br>
         <a href="http://www.google.com">This is a link to google.</a><br>
         <button onclick="showMsg()">This is a button.</button><br>
 
