--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <html>
     <head>
         <title>Louis' Webpage</title>
+        <style>
+            body {
+                width: 90%;
+                margin: 0
+            }
+        </style>
     </head>
     <body>
 
         <h1>Welcome to Louis' Webpage</h1>
         <p>Hello world.</p>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+        <br>
+        <br>
         <a href="http://www.google.com">This is a link to google.</a><br>
         <button onclick="showMsg()">This is a button.</button><br>
 
