--- a/2.html
+++ b/2.html
@@ -4,7 +4,7 @@
         <style>
             main {
                 width: 90%;
-                margin: 0
+                margin: 0 auto;
             }
         </style>
     </head>
