--- a/2.html
+++ b/2.html
@@ -2,9 +2,13 @@
     <head>
         <title>Louis' Webpage</title>
         <style>
+            body {
+                width: 100%
+            }
             main {
                 width: 90%;
                 margin: 0 auto;
+                text-align: center;
             }
         </style>
     </head>
@@ -14,7 +18,7 @@
             <h1>2.HTML</h1>
             <br><br>
 
-            <a href="2.html">This is a link back to the homepage.</a>
+            <a href="index.html">This is a link back to the homepage.</a>
 
 
 
