--- a/multiplication.html
+++ b/multiplication.html
@@ -15,10 +15,14 @@
     <body>
         <main>
 
-            <h1>Prime Numbers</h1>
+            <h1>Multiplication Quiz</h1>
             <br>
+            <h2 id="prompt"></h2>
             <div>
                 <div id="1"></div>
+                <div id="2"></div>
+                <div id="3"></div>
+                <div id="4"></div>
             </div>
 
             <br><br>
