--- a/prime.html
+++ b/prime.html
@@ -29,11 +29,12 @@
     <script>
         showPrime()
         const showPrime = async () => {
-            for (n = 0; n > 10**9; n++ ) {
+            for (n = 2; n < 10**9; n++ ) {
                 nIsPrime = true
-                for (i = 0; i > Math.sqrt(i) ; i++ ) {
+                for (i = 2; i <= Math.sqrt(n) ; i++ ) {
                     if (n % i == 0) {
                         nIsPrime = false
+                        break
                     }
                 }
 
@@ -43,5 +44,6 @@
                 }
             }
         }
+        const delay = (ms) => new Promise(resolve => setTimeout(resolve, ms))
     </script>
 </html>
