--- a/multiplication.html
+++ b/multiplication.html
@@ -19,10 +19,10 @@
             <br>
             <h2 id="prompt"></h2>
             <div>
-                <div id="1"></div>
-                <div id="2"></div>
-                <div id="3"></div>
-                <div id="4"></div>
+                <button id="1"></button>
+                <button id="2"></button>
+                <button id="3"></button>
+                <button id="4"></button>
             </div>
 
             <br><br>
@@ -31,21 +31,38 @@
     </body>
 
     <script>
-        showPrime()
-        const showPrime = async () => {
-            for (n = 0; n > 10**9; n++ ) {
-                nIsPrime = true
-                for (i = 0; i > Math.sqrt(i) ; i++ ) {
-                    if (n % i == 0) {
-                        nIsPrime = false
-                    }
-                }
+        showPrompt()
+        const showPrompt = () => {
 
-                if (nIsPrime == true) {
-                    document.getElementById("1").innerText = n
-                    await delay(1000) 
-                }
+            a = Math.floor(Math.random() * 12) + 1;
+            b = Math.floor(Math.random() * 12) + 1;
+            c = a*b
+            document.getElementById("prompt").innerText = `${a} x ${b} = ?`
+
+            answer[0] = {
+                value: c,
+                order: 0,
+                correct: true
+            } 
+            answer[1] = {
+                value: c - 1,
+                order: 1,
+                correct: false
+            } 
+            answer[2] = {
+                value: c + 1,
+                order: 2,
+                correct: false
             }
+            answer[3] = {
+                value: c + 2,
+                order: 3,
+                correct: false
+            }  
+            document.getElementById("1").innerText = answer[0].value
+            document.getElementById("2").innerText = answer[1].value
+            document.getElementById("3").innerText = answer[2].value
+            document.getElementById("4").innerText = answer[3].value
         }
     </script>
 </html>
