--- a/prime.html
+++ b/prime.html
@@ -39,7 +39,7 @@
                     }
 
                     if (nIsPrime) {
-                        document.getElementById("1").innerText = n
+                        document.getElementById("1").innerHTML = n
                         await delay(1000) 
                     }
                 }
