--- a/prime.html
+++ b/prime.html
@@ -28,6 +28,8 @@
         <script>
             showPrime()
             const showPrime = async () => {
+                document.getElementById("1").innerHTML = "running..."
+
                 for (let n = 2; n < 10**9; n++ ) {
                     nIsPrime = true
 
