--- a/multiplication.html
+++ b/multiplication.html
@@ -56,8 +56,8 @@
                     order: 3,
                     correct: false
                 }  
-                document.getElementById("0").innerHTML = `${answer[0].value}`
-                document.getElementById("1").innerHTML = `${answer[0].value}`
+                document.getElementById("0").value = `${answer[0].value}`
+                document.getElementById("1").text = `${answer[0].value}`
                 document.getElementById("2").innerText = answer[2].value
                 document.getElementById("3").innerText = answer[3].value
             }
