--- a/prime.html
+++ b/prime.html
@@ -19,7 +19,7 @@
             <br>
             <div id="1"></div>
             <br><br>
-            <a href="index.html">This is a link back to the homepage.</a>
+            <a href="index.html">back to the homepage</a>
         </main>
         <script>
             const delay = (ms) => new Promise( (resolve) => setTimeout(resolve, ms))
