--- a/multiplication.html
+++ b/multiplication.html
@@ -26,7 +26,7 @@
             </div>
 
             <br><br>
-            <a href="index.html">This is a link back to the homepage.</a>
+            <a href="index.html">back to the homepage</a>
         </main>
         <script>
             const showPrompt = () => {
